samples/_failures_safe/1761624491_0e1c4d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_46b10dcb.c: In function ‘tokenize’:
./samples/SAFE/__tmp_46b10dcb.c:168:5: error: expected expression at end of input
  168 |     while (
      |     ^~~~~
./samples/SAFE/__tmp_46b10dcb.c:168:5: error: expected declaration or statement at end of input
